--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>Dennis Jakobi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon_light_theme.png">
+  <link rel="icon" type="image/x-icon" href="favicon_light_theme.png" id="favicon">
+
 </head>
 
 <body>
