--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Dennis Jakobi</title>
-  <!-- <base href="/Portfolio/"> -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon_light_theme.png" id="favicon">
+  <link rel="icon" type="image/x-icon" href="/favicon_light_theme.png" id="favicon">
 </head>
 
 <body>
